--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "preinstall": "npx npm-force-resolutions"
   },
   "resolutions": {
-    "graceful-fs": "^4.2.10"
+    "graceful-fs": "4.2.11"
   },
   "author": "omprakash",
   "license": "ISC",
@@ -17,9 +17,9 @@
     "node": ">=8.9.1"
   },
   "dependencies": {
-    "@babel/cli": "7.4.4",
+    "@babel/cli": "^7.6.4",
     "@babel/core": "^7.4.5",
-    "@babel/node": "^7.12.1",
+    "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
@@ -48,9 +48,9 @@
     "express-rate-limit": "^6.7.0",
     "fcm-push": "^1.1.3",
     "fs-extra": "^11.1.0",
-    "ftp-client": "^0.2.2",
+    "ftp-client": "^0.2.0",
     "helmet": "^6.0.1",
-    "html-pdf": "^2.2.0",
+    "html-pdf": "^3.0.1",
     "html-to-text": "^9.0.2",
     "htmlparser": "^1.7.7",
     "http-status-codes": "^2.2.0",
@@ -68,10 +68,10 @@
     "node-fetch": "^2.6.7",
     "node-schedule": "^2.1.0",
     "node-uuid": "^1.4.8",
-    "node-xlsx": "^0.21.0",
+    "node-xlsx": "^0.4.0",
     "nodemailer": "^6.8.0",
     "nodemailer-express-handlebars": "^5.0.0",
-    "nodemailer-smtp-transport": "^2.7.4",
+    "nodemailer-smtp-transport": "^2.4.2",
     "objects-to-csv": "^1.3.6",
     "os": "^0.1.2",
     "passport": "^0.6.0",
@@ -86,7 +86,7 @@
     "striptags": "^3.2.0",
     "swagger-ui-express": "^4.6.2",
     "sync-each": "^1.0.1",
-    "twilio": "^3.83.4",
+    "twilio": "^4.13.0",
     "unzip": "^0.1.11",
     "v": "^0.3.0",
     "winston": "^3.8.2",
@@ -94,14 +94,14 @@
     "xregexp": "^5.1.1"
   },
   "overrides": {
-    "graceful-fs": "^4.2.10"
+    "graceful-fs": "4.2.11"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "mocha": "^10.1.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "^1.14.9",
     "prettier": "^2.8.1"
   }
 }
